--- a/QtGuiTestProject/QtGuiTestProject.ui
+++ b/QtGuiTestProject/QtGuiTestProject.ui
@@ -50,7 +50,7 @@
    <widget class="QPushButton" name="pushButton_open_file">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>50</x>
       <y>20</y>
       <width>93</width>
       <height>28</height>
@@ -63,7 +63,7 @@
    <widget class="QPushButton" name="pushButton_save">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>150</x>
       <y>20</y>
       <width>93</width>
       <height>28</height>
@@ -117,37 +117,68 @@
      <string>Входной файл отсутствует</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>310</y>
-      <width>221</width>
-      <height>65</height>
+      <x>303</x>
+      <y>260</y>
+      <width>251</width>
+      <height>71</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QLineEdit" name="lineEdit_modify"/>
-     </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_modify">
-       <property name="text">
-        <string>Модифицировать файл</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLineEdit" name="lineEdit_timer"/>
-     </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="pushButton_timer">
-       <property name="text">
-        <string>Таймер</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Программа считывает текст и удаляет в нем символы введенные в графу &amp;quot;Модифицировать файл&amp;quot;.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_modify">
+    <property name="geometry">
+     <rect>
+      <x>42</x>
+      <y>314</y>
+      <width>31</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_modify">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>311</y>
+      <width>161</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Модифицировать файл</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_timer">
+    <property name="geometry">
+     <rect>
+      <x>42</x>
+      <y>349</y>
+      <width>31</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_timer">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>346</y>
+      <width>161</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Запустить таймер</string>
+    </property>
    </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
